Bug 462718 - Plasma 5.24.7 fails to build
Summary: Plasma 5.24.7 fails to build
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.24.7
Platform: unspecified Linux
: NOR major
Target Milestone: 1.0
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-06 19:09 UTC by Fabian Vogt
Modified: 2022-12-08 16:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2022-12-06 19:09:14 UTC
The cherry-pick commit ae7adb368f52c0b7bf510e3c9cf12e368940745a introduced use of KPluginMetaData::fromJsonFile, but that's only available in kcoreaddons >= 5.91. Plasma 5.24 depends on >= 5.89.
Comment 1 Bug Janitor Service 2022-12-07 18:37:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2422
Comment 2 Alexander Lohnau 2022-12-08 16:46:38 UTC
Git commit 0b28ddfefbf2ce68bdc7af2248858ad2a9c444ec by Alexander Lohnau.
Committed on 07/12/2022 at 18:36.
Pushed by fvogt into branch 'Plasma/5.24'.

Add version guard for KPluginMetaData::fromJsonFile

M  +5    -0    kcms/desktoptheme/themesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0b28ddfefbf2ce68bdc7af2248858ad2a9c444ec