Add version guard for KPluginMetaData::fromJsonFile

BUG: 462718